--- a/Android/app/src/main/res/layout/activity_trip_detail.xml
+++ b/Android/app/src/main/res/layout/activity_trip_detail.xml
@@ -10,66 +10,83 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#4ABDAC"
     tools:context="com.lintech.yougo.tripDetail">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:background="#ECEFF1"
         android:orientation="vertical"
         android:paddingTop="50dp"
         android:paddingBottom="50dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Trip Detail"
+            android:id="@+id/regLbl"
+            android:fontFamily="monospace"
+            android:textSize="33sp"
+            android:textAllCaps="false"
+            android:layout_marginBottom="55dp"
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/black"
+            android:textStyle="normal|bold" />
+
+        <EditText
+            android:id="@+id/destFld"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            ems="10"
+            android:fontFamily="monospace"
+            android:layout_marginBottom="25dp"
+            android:hint="Destination:" />
+
         <EditText
             android:id="@+id/longFld"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
-            android:textAlignment="center"
             android:ems="10"
-            android:layout_marginBottom="15dp"
-            android:hint="Longitude"/>
+            android:fontFamily="monospace"
+            android:layout_marginBottom="25dp"
+            android:hint="Longitude:"/>
 
         <EditText
             android:id="@+id/latFld"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
-            android:textAlignment="center"
             android:ems="10"
-            android:layout_marginBottom="15dp"
-            android:hint="Latitude"/>
+            android:fontFamily="monospace"
+            android:layout_marginBottom="25dp"
+            android:hint="Latitude:"/>
 
         <EditText
             android:id="@+id/radFld"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:textAlignment="center"
             android:ems="10"
-            android:layout_marginBottom="15dp"
-            android:hint="Radius(m)"/>
-
-        <EditText
-            android:id="@+id/emailFld"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:textAlignment="center"
-            android:layout_marginBottom="15dp"
-            android:ems="10"
-            android:hint="Email"/>
+            android:fontFamily="monospace"
+            android:layout_marginBottom="25dp"
+            android:hint="Radius(m):"/>
 
         <Button
             android:text="Save Trip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#FF6E40"
+            android:fontFamily="monospace"
+            android:textColor="@android:color/black"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/radFld"
             android:id="@+id/addTripBtn"
-            android:onClick="changeTrip"/>
+            android:onClick="changeTrip"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
