--- a/Android/app/src/main/res/layout/activity_trip_detail.xml
+++ b/Android/app/src/main/res/layout/activity_trip_detail.xml
@@ -49,7 +49,7 @@
             android:id="@+id/longFld"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType=numberDecimal|numberSigned"
+            android:inputType="numberDecimal|numberSigned"
             android:ems="10"
             android:fontFamily="monospace"
             android:layout_marginBottom="10dp"
