--- a/Android/app/src/main/res/layout/activity_trip_list.xml
+++ b/Android/app/src/main/res/layout/activity_trip_list.xml
@@ -143,4 +143,15 @@
         android:layout_toRightOf="@+id/linearLayout"
         android:layout_toEndOf="@+id/linearLayout" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_dialog_map"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/floatingActionButton2" />
+
 </RelativeLayout>
